@@ -1,0 +1,18 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2006-2007 Denis M. Gabaidulin                           *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+	/**
+	 * @ingroup Exceptions
+	 * @ingroup Module
+	**/
+	class FileNotFoundException extends BaseException {/*_*/}
+?>
